--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+
+	<div id="kolory-predefiniowane"></div>
+	<div id="kolory-heksadecymalne"></div>
+	<div id="kolory-heksadecymalne-zapis-skrocony"></div>
+	<div id="kolory-funkcja-rgb"></div>
+	<div id="kolory-funkcja-rgba"></div>
 	
 </body>
 </html>
